// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StageTemplateDiagram /> tests should render plus button when stage is not selected 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-form StyledProps--padding-left-xxxlarge StyledProps--padding-right-xxxlarge"
    style="width: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-flex-start"
      style="height: 100%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
      >
        Stage Type
      </p>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main normalLayout"
        >
          <div
            class="StyledProps--font StyledProps--main"
            data-nodeid="create-node"
          >
            <div
              class="defaultNode createNode create-node"
              style="margin-left: -19px;"
            >
              <div
                class="defaultCard createNew createNewModal"
                style="margin-top: 12px; width: 90px; height: 40px;"
              >
                <div>
                  <span
                    class="bp3-icon bp3-icon-plus"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      fill="var(--diagram-add-node-color)"
                      height="22"
                      viewBox="0 0 20 20"
                      width="22"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M16 9h-5V4c0-.55-.45-1-1-1s-1 .45-1 1v5H4c-.55 0-1 .45-1 1s.45 1 1 1h5v5c0 .55.45 1 1 1s1-.45 1-1v-5h5c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <div>
                    <div
                      style="visibility: visible;"
                    />
                    <div
                      style="visibility: visible;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <p
            class="StyledProps--font StyledProps--main stageType StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StageTemplateDiagram /> tests should render stage button when stage is selected 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-form StyledProps--padding-left-xxxlarge StyledProps--padding-right-xxxlarge"
    style="width: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-flex-start"
      style="height: 100%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
      >
        Stage Type
      </p>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main normalLayout"
        >
          <div
            class="StyledProps--font StyledProps--main"
            data-nodeid="create-node"
          >
            <div
              class="defaultNode default-node"
              style="margin-left: -19px;"
            >
              <div
                class="defaultCard createNewModal"
                draggable="false"
                style="width: 90px; height: 40px; margin-top: 12px; cursor: pointer; opacity: 1; border-width: 1px; border-style: solid;"
              >
                <div
                  class="execution-running-animation"
                />
                <div
                  style="visibility: visible;"
                />
                <div
                  style="visibility: visible;"
                />
                <span
                  class="bp3-icon StyledProps--main secondaryIcon"
                  data-icon="command-echo"
                >
                  <svg
                    enable-background="new 0 0 14 11"
                    height="8"
                    viewBox="0 0 14 11"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m4.2 2.8c0-.4-.3-.7-.7-.7-.2 0-.4 0-.5.2l-2.8 2.7c-.1.1-.2.3-.2.5s.1.4.2.5l2.8 2.7c.1.1.3.2.5.2.4 0 .7-.3.7-.7 0-.2-.1-.4-.2-.5l-2.3-2.2 2.3-2.3c.1-.1.2-.3.2-.4zm4.2-2.8c-.3 0-.6.2-.7.5l-2.8 9.6v.2c0 .4.3.7.7.7.3 0 .6-.2.7-.5l2.8-9.6c0-.1 0-.1 0-.2 0-.4-.3-.7-.7-.7zm5.4 5-2.8-2.7c-.1-.1-.3-.2-.5-.2-.4 0-.7.3-.7.7 0 .2.1.4.2.5l2.3 2.3-2.3 2.2c-.1.1-.2.3-.2.4 0 .4.3.7.7.7.2 0 .4-.1.5-.2l2.8-2.7c.1-.1.2-.3.2-.5s-.1-.4-.2-.5z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              
            </div>
          </div>
          <p
            class="StyledProps--font StyledProps--main stageType StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
